2000-01-05  Katsumi Yamaoka   <yamaoka@jpl.org>

	* Makefile, README.en: Update for the new CVS server.

1999-12-13  Katsumi Yamaoka   <yamaoka@jpl.org>

	* README.en: Update for the recent ML address and ftp site.

1999-11-10  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* mime-play.el: (mime-save-directory): New variable.
	(mime-save-content): Don't force filename parameter to be used.

1999-11-01  Tanaka Akira  <akr@jaist.ac.jp>
	* mime-view.el (mime-display-application/x-postpet): New function.
	(mime-preview-condition): Set up for
	'mime-preview-application/x-postpet.
	(unpack): New macro.	
	(unpack-skip): New function.
	(unpack-fixed): New function.
	(unpack-byte): New function.
	(unpack-short): New function.
	(unpack-long): New function.
	(unpack-string): New function.
	(unpack-string-sjis): New function.
	(postpet-decode): New function.

1999-10-17  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* SEMI-MK (install-semi-package): Delte auto-autoloads.el
	and custom-load.el


1999-10-16  MORIOKA Tomohiko  <tomo@m17n.org>

	* SEMI: Version 1.13.7 (Awazu) released.

1999-10-06  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* mime-view.el (mime-preview-move-to-upper): Scroll
	according to mime-preview-move-scroll.

1999-10-05  Yoshiki Hayashi  <t90553@mail.ecc.u-tokyo.ac.jp>

	* mime-view.el (mime-preview-scroll-down-entity,
	mime-preview-scroll-up-entity): Recenter when moving to
	a next entity.
	(mime-preview-move-scroll): New variable.
	(mime-preview-move-to-previous, mime-preview-move-to-next):
	Recenter according to the variable mime-preview-move-scroll.

1999-10-04  Katsumi Yamaoka   <yamaoka@jpl.org>

	* mime-view.el (mime-preview-move-to-next): Attempt to go to the
	next page if the return value of `next-single-property-change' is
	greater than `point-max'.
	(mime-preview-move-to-previous): Don't move backward at the
	beginning of the buffer; attempt to go to the previous page if the